--- a/client/src/css/app.css
+++ b/client/src/css/app.css
@@ -284,20 +284,33 @@ button:hover {
 #recipe .container .modal-ph {
   width: 50%;
 }
-#recipe .container .modal {
+#recipe .container .modal-space {
   width: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
   position: relative;
 }
-#recipe .container .modal .modal-content {
+#recipe .container .modal-space .modal {
   position: absolute;
   background-color: #232323;
   width: 95%;
   height: 82%;
   bottom: 0;
   border-radius: 15px;
+  overflow: scroll;
+}
+#recipe .container .modal-space .modal .modal-content {
+  padding: 1rem;
+}
+#recipe .container .modal-space .modal .modal-content img {
+  width: 50%;
+  margin: 1rem 0;
+  margin-right: 1rem;
+  float: left;
+}
+#recipe .container .modal-space .modal .modal-content .summary {
+  margin-top: 0.5rem;
 }
 #recipe .container .food-img {
   position: absolute;
