--- a/client/src/sass/app.scss
+++ b/client/src/sass/app.scss
@@ -299,7 +299,7 @@ button:hover {
             width: 50%;
         }
 
-        .modal {
+        .modal-space {
             width: 50%;
             // background-color: red;
             display: flex;
@@ -307,13 +307,36 @@ button:hover {
             align-items: center;
             position: relative;
 
-            .modal-content {
+            .modal {
                 position: absolute;
                 background-color: $navBar;
                 width: 95%;
                 height: 82%;
                 bottom: 0;
                 border-radius: 15px;
+                overflow: scroll;
+
+                .modal-content {
+                    padding: 1rem;
+                    // overflow: scroll;
+
+                    img {
+                        width: 50%;
+                        margin: 1rem 0;
+                        margin-right: 1rem;
+                        float: left;
+                    }
+
+                    .summary {
+                        margin-top: .5rem;
+                        // line-height: 1.6;
+                    }
+
+                    // .instructions {
+                    //     list-style: none;
+                    //     margin: 1rem;
+                    // }
+                }
             }
         }
 
