--- a/client/src/sass/app.scss
+++ b/client/src/sass/app.scss
@@ -54,6 +54,10 @@ a:link {
     background-color: $navBar;
 }
 
+.line-height {
+    line-height: 1.6;
+}
+
 #heading {
     z-index: 3;
     position: relative;
@@ -328,14 +332,33 @@ button:hover {
                     }
 
                     .summary {
-                        margin-top: .5rem;
+                        margin-top: .7rem;
                         // line-height: 1.6;
                     }
 
-                    // .instructions {
-                    //     list-style: none;
-                    //     margin: 1rem;
-                    // }
+                    .details {
+                        display: flex;
+                        flex-direction: column;
+                        gap: 1rem;
+                        margin-top: 1.5rem;
+
+                        span, h2 {
+                            text-decoration: underline;
+                        }
+
+                        .ingredients {
+                            list-style-type: disc;
+                            list-style-position: inside;
+                        }
+
+                        .instructions {
+                            list-style-position: inside;
+
+                            li {
+                                margin-bottom: 1rem;
+                            }
+                        }
+                    }
                 }
             }
         }
@@ -417,12 +440,14 @@ button:hover {
                     img {
                         width: 100%;
                         border-top-left-radius: 15px;
-                        border-top-right-radius: 15px;                    
+                        border-top-right-radius: 15px;
+                        pointer-events: none;                    
                     }
 
                     h3 {
                         padding: 10px;
                         text-align: center;
+                        pointer-events: none;
                     }
                 }
 
