update: make spin image unclickable

--- a/client/src/sass/app.scss
+++ b/client/src/sass/app.scss
@@ -371,6 +371,7 @@ button:hover {
             top: -23%;
             left: -42%;
             animation: rotate 20s linear infinite;
+            pointer-events: none;
         }
 
 
