--- a/client/src/css/app.css
+++ b/client/src/css/app.css
@@ -342,6 +342,7 @@ button:hover {
   top: -23%;
   left: -42%;
   animation: rotate 20s linear infinite;
+  pointer-events: none;
 }
 #recipe .container .content {
   width: 50%;
