--- a/client/src/css/app.css
+++ b/client/src/css/app.css
@@ -354,7 +354,6 @@ button:hover {
   margin-top: 3rem;
 }
 #recipe .container .content .search #searchbar {
-  width: 50%;
   height: 2.3rem;
   padding: 0 10px;
   margin-right: 5px;
@@ -395,9 +394,7 @@ button:hover {
   align-items: center;
   border-radius: 20px;
   background-color: #232323;
-  box-shadow: 0px 0px 15px 2px rgba(0, 0, 0, 0.8);
-  -webkit-box-shadow: 0px 0px 15px 2px rgba(0, 0, 0, 0.8);
-  -moz-box-shadow: 0px 0px 15px 2px rgba(0, 0, 0, 0.8);
+  transition: all 0.5s;
 }
 #recipe .container .content .foods .food-item img {
   width: 100%;
@@ -412,6 +409,9 @@ button:hover {
 }
 #recipe .container .content .foods .food-item:hover {
   cursor: pointer;
+  box-shadow: 0px 0px 15px 2px rgba(0, 0, 0, 0.8);
+  -webkit-box-shadow: 0px 0px 15px 2px rgba(0, 0, 0, 0.8);
+  -moz-box-shadow: 0px 0px 15px 2px rgba(0, 0, 0, 0.8);
 }
 
 #about {
