--- a/client/src/sass/app.scss
+++ b/client/src/sass/app.scss
@@ -385,7 +385,6 @@ button:hover {
                 margin-top: 3rem;
 
                 #searchbar {
-                    width: 50%;
                     height: 2.3rem;
                     padding: 0 10px;
                     margin-right: 5px;
@@ -434,9 +433,7 @@ button:hover {
                     align-items: center;
                     border-radius: 20px;
                     background-color: $navBar;
-                    box-shadow: 0px 0px 15px 2px rgba(0,0,0,0.8);
-                    -webkit-box-shadow: 0px 0px 15px 2px rgba(0,0,0,0.8);
-                    -moz-box-shadow: 0px 0px 15px 2px rgba(0,0,0,0.8);
+                    transition: all .5s;
 
                     img {
                         width: 100%;
@@ -454,6 +451,9 @@ button:hover {
 
                 .food-item:hover {
                     cursor: pointer;
+                    box-shadow: 0px 0px 15px 2px rgba(0,0,0,0.8);
+                    -webkit-box-shadow: 0px 0px 15px 2px rgba(0,0,0,0.8);
+                    -moz-box-shadow: 0px 0px 15px 2px rgba(0,0,0,0.8);
                 }
             }
         }
