--- a/client/src/css/app.css
+++ b/client/src/css/app.css
@@ -384,6 +384,7 @@ button:hover {
   gap: 2rem;
   overflow-y: scroll;
   padding-top: 1.5rem;
+  padding-bottom: 1.2rem;
   border-radius: 8px;
 }
 #recipe .container .content .foods .food-item {
