--- a/client/src/sass/app.scss
+++ b/client/src/sass/app.scss
@@ -423,6 +423,7 @@ button:hover {
                 gap: 2rem;
                 overflow-y: scroll;
                 padding-top: 1.5rem;
+                padding-bottom: 1.2rem;
                 border-radius: 8px;
 
                 .food-item {
