--- a/client/src/sass/app.scss
+++ b/client/src/sass/app.scss
@@ -301,6 +301,12 @@ button:hover {
 
         .modal-ph {
             width: 50%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            z-index: 2;
+            font-size: 3rem;
+            color: $ten;
         }
 
         .modal-space {
