update: hero and contact responsiveness

--- a/client/src/sass/abstracts/_colors.scss
+++ b/client/src/sass/abstracts/_colors.scss
@@ -1,7 +1,8 @@
 $navBar: #232323;
-$sixty: #EAC696;
-$thirty: #C8AE7D;
+$sixty: #eac696;
+$thirty: #c8ae7d;
 $ten: #1e7943;
 // $blur: rgba(3, 168, 251, 0.3);
 $blur: rgba(101, 69, 31, 0.399);
 $highlight: #0087ca;
+$white: #f9f0eb;
