--- a/client/src/css/app.css
+++ b/client/src/css/app.css
@@ -53,11 +53,63 @@
     top: 0.9rem;
     right: 1.4rem;
   }
-  body #heading nav .menu-btn .hidden, body #heading nav .menu-btn .clicked {
+  body #heading nav .menu-btn .hidden,
+  body #heading nav .menu-btn .clicked {
     display: none;
   }
-  body #heading nav .menu-btn .visiable, body #heading nav .menu-btn .unclicked {
+  body #heading nav .menu-btn .visiable,
+  body #heading nav .menu-btn .unclicked {
     display: inline-block;
+  }
+}
+@media (max-width: 500px) {
+  body #heading nav {
+    padding: 1rem 1rem 0;
+  }
+  body #heading nav .menu-btn .burger {
+    margin: 0;
+  }
+  body #heading nav .menu-btn .close-icon {
+    top: 1.3rem;
+    right: 15px;
+  }
+  body #heading nav .menu-btn .menu .navbar-a {
+    width: 50%;
+    padding: 3rem 0;
+  }
+  body video {
+    width: 100svw;
+    height: 100svh;
+  }
+  body #content {
+    padding: 0 1rem;
+  }
+  body #contact {
+    flex-direction: column;
+    width: 100svw;
+  }
+  body #contact .contact-img {
+    width: 100vw;
+    position: absolute;
+    z-index: -1;
+    height: 100svh;
+  }
+  body #contact .contact-inputs {
+    width: 100vw;
+    height: 100svh;
+    background: rgba(4, 4, 4, 0.5);
+    margin-bottom: 0;
+    color: white;
+  }
+  body #contact .contact-inputs .inputs label {
+    color: inherit !important;
+  }
+  body #contact .contact-inputs .inputs input::placeholder,
+  body #contact .contact-inputs .inputs textarea::placeholder {
+    color: white;
+  }
+  body #contact .contact-inputs > *:not(button) {
+    color: inherit !important;
   }
 }
 * {
@@ -68,12 +120,15 @@
 }
 
 body {
-  background-color: #EAC696;
+  background-color: #eac696;
   color: white;
   overflow: hidden;
 }
 
-h1, h2, h3, h2 span {
+h1,
+h2,
+h3,
+h2 span {
   font-family: "Assistant", sans-serif;
 }
 
@@ -130,11 +185,13 @@ a:link {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   padding: 1rem 0 1rem 3rem;
+  font-size: 1.5rem;
 }
 #heading nav .brand {
   cursor: pointer;
   display: inline-block;
   text-transform: uppercase;
+  font-size: 2rem;
 }
 #heading nav .menu-btn {
   display: none;
@@ -220,13 +277,15 @@ video {
 #content .sub-heading {
   font-size: 2rem;
 }
-#content .title, #content .sub-heading {
+#content .title,
+#content .sub-heading {
   letter-spacing: 3px;
   text-transform: uppercase;
 }
 #content .description {
   width: 70%;
   margin: 3rem 0;
+  font-size: 1.1rem;
 }
 
 button {
@@ -339,7 +398,8 @@ button:hover {
   gap: 1rem;
   margin-top: 1.5rem;
 }
-#recipe .container .modal-space .modal .modal-content .details span, #recipe .container .modal-space .modal .modal-content .details h2 {
+#recipe .container .modal-space .modal .modal-content .details span,
+#recipe .container .modal-space .modal .modal-content .details h2 {
   text-decoration: underline;
 }
 #recipe .container .modal-space .modal .modal-content .details .ingredients {
@@ -375,7 +435,7 @@ button:hover {
   padding: 0 10px;
   margin-right: 5px;
   border-radius: 5px;
-  border: 2px solid #EAC696;
+  border: 2px solid #eac696;
 }
 #recipe .container .content .search #searchbar:focus {
   outline: none;
@@ -494,7 +554,8 @@ button:hover {
   color: rgba(0, 0, 0, 0.5);
   font-weight: 600;
 }
-#contact .contact-inputs .inputs input, #contact .contact-inputs .inputs textarea {
+#contact .contact-inputs .inputs input,
+#contact .contact-inputs .inputs textarea {
   width: 100%;
   height: 2.3rem;
   margin-right: 5px;
@@ -507,7 +568,8 @@ button:hover {
   color: #232323;
   font-weight: 600;
 }
-#contact .contact-inputs .inputs input::placeholder, #contact .contact-inputs .inputs textarea::placeholder {
+#contact .contact-inputs .inputs input::placeholder,
+#contact .contact-inputs .inputs textarea::placeholder {
   color: #232323;
 }
 #contact .contact-inputs .inputs input:focus {
