--- a/client/src/sass/abstracts/_media.scss
+++ b/client/src/sass/abstracts/_media.scss
@@ -105,7 +105,9 @@
     }
 
     #content {
+      height: fit-content;
       padding: 0 1rem;
+      margin-top: 3rem;
     }
     //////////////////// Contact section ///////////////
     #contact {
