--- a/client/src/css/app.css
+++ b/client/src/css/app.css
@@ -50,7 +50,7 @@
     position: absolute;
     font-size: 2rem;
     color: white;
-    top: 0.9rem;
+    top: 1.4rem;
     right: 1.4rem;
   }
   body #heading nav .menu-btn .hidden,
@@ -63,9 +63,6 @@
   }
 }
 @media (max-width: 500px) {
-  html body {
-    overflow: auto;
-  }
   html body #root {
     height: 100svh;
     width: 100svw;
@@ -90,7 +87,6 @@
     pointer-events: none;
   }
   html body #content {
-    height: fit-content;
     padding: 0 1rem;
     margin-top: 3rem;
   }
@@ -100,21 +96,23 @@
   html body #content .slider-nav {
     transform: translateY(40px);
   }
-  html body #recipe .search {
-    transform: translateX(-50%);
-  }
   html body #recipe .container {
-    overflow: hidden;
+    flex-wrap: wrap;
     position: relative;
   }
   html body #recipe .container .food-img {
-    height: auto;
-    top: 16%;
-    left: 0%;
+    height: 22%;
+    right: 1rem;
+  }
+  html body #recipe .container .content {
+    width: 100svw;
   }
   html body #recipe .container .content .results .foods .food-item {
     width: 161px;
     height: 221px;
+  }
+  html body #recipe .container .modal-space {
+    width: 100svw;
   }
   html body #about {
     height: 100svh;
@@ -151,6 +149,40 @@
     color: inherit !important;
   }
 }
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+@keyframes slideRight {
+  0% {
+    opacity: 0;
+    transform: translateX(300px);
+  }
+  100% {
+    opacity: 100%;
+    transform: translateX(0);
+  }
+}
+@keyframes bounce-in-right {
+  0% {
+    opacity: 0;
+    transform: translateX(2000px);
+  }
+  60% {
+    transform: translateX(-30px);
+  }
+  80% {
+    transform: translateX(10px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
 * {
   padding: 0;
   margin: 0;
@@ -159,9 +191,9 @@
 }
 
 body {
-  background-color: #eac696;
+  background-color: #f2e8c6;
   color: white;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 h1,
@@ -189,16 +221,16 @@ a:link {
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #1e7943;
+  background: #952323;
   border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: #1f954e;
+  background: #6c1919;
 }
 
 .navBgColor {
-  background-color: #232323;
+  background-color: #3f2323;
 }
 
 .line-height {
@@ -218,7 +250,8 @@ a:link {
 
 #heading {
   z-index: 3;
-  position: relative;
+  position: absolute;
+  width: 100%;
 }
 #heading nav {
   display: grid;
@@ -304,7 +337,7 @@ video {
   z-index: 2;
   position: relative;
   width: 100%;
-  height: 90vh;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -338,7 +371,7 @@ button {
 }
 
 button:hover {
-  background-color: #1e7943;
+  background-color: #952323;
   color: #e3e3e3;
 }
 
@@ -366,7 +399,7 @@ button:hover {
 }
 
 .active {
-  background-color: #1e7943 !important;
+  background-color: #952323 !important;
 }
 
 .slider-nav {
@@ -391,8 +424,13 @@ button:hover {
   transform: scale(1.2);
 }
 
+#recipe {
+  width: 100%;
+}
 #recipe .container {
   display: flex;
+  height: 100vh;
+  width: 100%;
 }
 #recipe .container .modal-ph {
   width: 50%;
@@ -401,23 +439,22 @@ button:hover {
   align-items: center;
   z-index: 2;
   font-size: 3rem;
-  color: #1e7943;
+  color: #952323;
 }
 #recipe .container .modal-space {
+  height: fit-content;
   width: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
-  position: relative;
 }
 #recipe .container .modal-space .modal {
-  position: absolute;
-  background-color: #232323;
+  background-color: #3f2323;
   width: 95%;
   height: 82%;
-  bottom: 0;
   border-radius: 15px;
-  overflow: scroll;
+  margin-top: 11.3rem;
+  margin-bottom: 1rem;
 }
 #recipe .container .modal-space .modal .modal-content {
   padding: 1rem;
@@ -436,6 +473,7 @@ button:hover {
   flex-direction: column;
   gap: 1rem;
   margin-top: 1.5rem;
+  float: right;
 }
 #recipe .container .modal-space .modal .modal-content .details span,
 #recipe .container .modal-space .modal .modal-content .details h2 {
@@ -453,15 +491,17 @@ button:hover {
 }
 #recipe .container .food-img {
   position: absolute;
-  width: 100%;
-  height: 100%;
-  top: -23%;
-  left: -42%;
-  animation: rotate 20s linear infinite;
+  width: fit-content;
+  height: 50%;
+  top: 4.2rem;
+  right: 0;
   pointer-events: none;
   z-index: -1;
+  opacity: 0;
+  animation: bounce-in-right 1s forwards;
 }
 #recipe .container .content {
+  margin-top: 3rem;
   width: 50%;
 }
 #recipe .container .content .search {
@@ -475,31 +515,32 @@ button:hover {
   padding: 0 10px;
   margin-right: 5px;
   border-radius: 5px;
-  border: 2px solid #eac696;
+  border: 2px solid #f2e8c6;
 }
 #recipe .container .content .search #searchbar:focus {
   outline: none;
-  border: 2px solid #1e7943;
+  border: 2px solid #952323;
 }
-#recipe .container .content .search .search-icon:hover {
+#recipe .container .content .search button {
+  background-color: #952323;
+  color: #f9f0eb;
+}
+#recipe .container .content .search button:hover {
   cursor: pointer;
-}
-#recipe .container .content .results {
-  overflow: hidden;
+  background-color: #be2d2d;
 }
 #recipe .container .content .results h2 {
-  color: #232323;
+  color: #3f2323;
   margin: 1rem 0 0 1.2rem;
   text-decoration: underline;
 }
 #recipe .container .content .foods {
   display: flex;
   flex-wrap: wrap;
-  height: 75vh;
+  height: fit-content;
   justify-content: center;
   align-items: center;
   gap: 2rem;
-  overflow-y: scroll;
   padding-top: 1.5rem;
   padding-bottom: 1.2rem;
   border-radius: 8px;
@@ -511,8 +552,9 @@ button:hover {
   flex-direction: column;
   align-items: center;
   border-radius: 20px;
-  background-color: #232323;
+  background-color: #952323;
   transition: all 0.5s;
+  border: 2px solid #952323;
 }
 #recipe .container .content .foods .food-item img {
   width: 100%;
@@ -539,11 +581,8 @@ button:hover {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-}
-#about img {
-  width: 100%;
-  height: 100%;
-  position: absolute;
+  background-image: url("../assets/img/about_bg.avif");
+  background-size: cover;
 }
 #about .content {
   width: 65%;
@@ -571,6 +610,7 @@ button:hover {
 }
 #contact .contact-inputs {
   width: 50vw;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -580,7 +620,7 @@ button:hover {
 }
 #contact .contact-inputs h1 {
   font-size: 3rem;
-  color: #232323;
+  color: #3f2323;
 }
 #contact .contact-inputs .inputs {
   display: flex;
@@ -605,12 +645,12 @@ button:hover {
   border: none;
   border-bottom: 2px solid white;
   background: none;
-  color: #232323;
+  color: #3f2323;
   font-weight: 600;
 }
 #contact .contact-inputs .inputs input::placeholder,
 #contact .contact-inputs .inputs textarea::placeholder {
-  color: #232323;
+  color: #3f2323;
 }
 #contact .contact-inputs .inputs input:focus {
   outline: none;
@@ -625,13 +665,4 @@ button:hover {
 }
 #contact .contact-inputs .inputs button {
   margin-top: 2rem;
-}
-
-@keyframes rotate {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
 }/*# sourceMappingURL=app.css.map */
