--- a/client/src/sass/abstracts/_colors.scss
+++ b/client/src/sass/abstracts/_colors.scss
@@ -1,8 +1,12 @@
-$navBar: #232323;
-$sixty: #eac696;
-$thirty: #c8ae7d;
-$ten: #1e7943;
+$navBar: #3f2323;
+// $navBar: #232323;
+// $sixty: #eac696;
+$sixty: #f2e8c6;
+$thirty: #332907;
+// $ten: #1e7943;
+$ten: #952323;
 // $blur: rgba(3, 168, 251, 0.3);
 $blur: rgba(101, 69, 31, 0.399);
 $highlight: #0087ca;
 $white: #f9f0eb;
+// $white: #eeeeee;
