--- a/client/src/sass/abstracts/_media.scss
+++ b/client/src/sass/abstracts/_media.scss
@@ -128,9 +128,9 @@
     //////////////////// Recipe section ///////////////
 
     #recipe {
-      .search {
-        // transform: translateX(-50%);
-      }
+      // .search {
+      // transform: translateX(-50%);
+      // }
       .container {
         // overflow: hidden;
         flex-wrap: wrap;
