--- a/client/src/sass/app.scss
+++ b/client/src/sass/app.scss
@@ -606,3 +606,38 @@ button:hover {
     }
   }
 }
+
+#error-page {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  width: 100%;
+  height: 100svh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: url("../assets/img/error_bg.avif") no-repeat center bottom;
+  background-size: cover;
+
+  span {
+    font-size: 8rem;
+  }
+
+  h1 {
+    text-align: center;
+    color: $white;
+    font-size: 4rem;
+    z-index: 2;
+  }
+}
+
+#error-page:before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.4);
+}
