--- a/client/src/css/app.css
+++ b/client/src/css/app.css
@@ -212,6 +212,29 @@ a:link {
   position: relative;
 }
 
+footer {
+  color: #3f2323;
+  text-align: center;
+  padding: 1rem 0;
+}
+footer ul {
+  display: flex;
+  justify-content: center;
+  list-style: none;
+  gap: 1rem;
+}
+footer ul li:nth-child(1) {
+  border-right: double;
+  padding: 0 1rem;
+}
+footer ul li > a {
+  color: #3f2323;
+}
+footer .copyright {
+  margin-top: 1rem;
+  font-size: 0.8rem;
+}
+
 ::-webkit-scrollbar {
   width: 15px;
 }
@@ -274,7 +297,25 @@ a:link {
   flex-direction: row;
   gap: 2rem;
   justify-content: center;
+  align-items: center;
   color: white;
+}
+#heading nav .navbar li > button {
+  padding: 0.5rem;
+  font-weight: bold;
+}
+#heading nav .navbar li:nth-child(2) > button:hover {
+  filter: brightness(90%);
+  background-color: #f9f0eb;
+  color: #952323;
+}
+#heading nav .navbar li:nth-child(3) > button {
+  background-color: #952323;
+  color: #f9f0eb;
+}
+#heading nav .navbar li:nth-child(3) > button:hover {
+  background-color: #6c1919;
+  color: #f9f0eb;
 }
 #heading nav .navbar a.p-current::after {
   content: "";
@@ -429,7 +470,7 @@ button:hover {
 }
 #recipe .container {
   display: flex;
-  height: 100vh;
+  height: fit-content;
   width: 100%;
 }
 #recipe .container .modal-ph {
