create sign up form

--- a/client/src/css/app.css
+++ b/client/src/css/app.css
@@ -212,6 +212,20 @@ a:link {
   position: relative;
 }
 
+.full-page {
+  width: 100vw;
+  height: 100vh;
+  width: 100svw;
+  height: 100svh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.grid-display {
+  display: grid;
+}
+
 footer {
   color: #3f2323;
   text-align: center;
@@ -227,12 +241,56 @@ footer ul li:nth-child(1) {
   border-right: double;
   padding: 0 1rem;
 }
-footer ul li > a {
+footer ul li a {
   color: #3f2323;
+}
+footer ul li a::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 2px;
+  bottom: -3px;
+  left: 0;
+  background-color: #0087ca;
+  transform-origin: bottom left;
+  transition: transform 0.25s ease-out;
+}
+footer ul li a:hover::after {
+  transform: scaleX(1);
+  transform-origin: bottom left;
 }
 footer .copyright {
   margin-top: 1rem;
   font-size: 0.8rem;
+}
+
+.hide {
+  visibility: hidden;
+}
+
+.show {
+  visibility: visible !important;
+}
+
+.revealPsw {
+  position: relative;
+}
+
+.fa-eye {
+  visibility: hidden;
+}
+
+.fa-eye-slash,
+.fa-eye {
+  position: absolute;
+  margin-left: 1rem;
+  top: 30%;
+}
+
+.fa-eye-slash:hover,
+.fa-eye:hover {
+  cursor: pointer;
 }
 
 ::-webkit-scrollbar {
@@ -739,4 +797,71 @@ button:hover {
   left: 0;
   right: 0;
   background: rgba(0, 0, 0, 0.4);
+}
+
+#register {
+  flex-direction: column;
+  gap: 1.5rem;
+}
+#register .signup-wrapper {
+  display: flex;
+  background: #3f2323;
+  justify-content: center;
+  width: 40%;
+  height: 51%;
+  align-items: center;
+  border-radius: 50px;
+  box-shadow: 0px 10px 50px 0px rgba(0, 0, 0, 0.8);
+}
+#register .signup-wrapper .formInputs {
+  display: grid;
+  grid-template-columns: 1fr;
+  align-items: center;
+  gap: 1.5rem;
+  height: 85%;
+}
+#register .signup-wrapper .formInputs div:not(:last-of-type) {
+  padding: 0 3rem;
+}
+#register .signup-wrapper .formInputs input[name=pwd] {
+  width: 100%;
+}
+#register .signup-wrapper .formInputs input[name=pwd],
+#register .signup-wrapper .formInputs input[name=email] {
+  border-radius: 5px;
+  height: 2rem;
+  border: 1px solid black;
+  margin-top: 0.3rem;
+  padding: 0 0.3rem;
+}
+#register .signup-wrapper .formInputs p {
+  text-align: center;
+  font-size: 0.8rem;
+  margin: auto 2.8rem;
+  margin-top: 0.5rem;
+}
+#register .signup-wrapper .formInputs .submit-buttons {
+  display: flex;
+  justify-content: center;
+  gap: 4rem;
+}
+#register .signup-wrapper .formInputs .submit-buttons button {
+  padding: 0.5rem;
+  width: 73%;
+  background: maroon;
+  color: white;
+}
+#register .signup-wrapper .formInputs .submit-buttons button:hover {
+  filter: brightness(90%);
+}
+#register div:nth-last-child(2) {
+  margin-top: 1rem;
+  font-size: 0.85rem;
+  color: #3f2323;
+}
+#register div:nth-last-child(2) a {
+  color: #0087ca;
+}
+#register div:nth-last-child(2) a:hover {
+  color: #952323;
 }/*# sourceMappingURL=app.css.map */
