--- a/client/src/sass/abstracts/_colors.scss
+++ b/client/src/sass/abstracts/_colors.scss
@@ -1,8 +1,8 @@
-$navBar: #3f2323;
+$navBar: #3f2323; // this is now the new thirty
 // $navBar: #232323;
 // $sixty: #eac696;
 $sixty: #f2e8c6;
-$thirty: #332907;
+// $thirty: #332907;
 // $ten: #1e7943;
 $ten: #952323;
 // $blur: rgba(3, 168, 251, 0.3);
