--- a/client/src/css/app.css
+++ b/client/src/css/app.css
@@ -183,6 +183,110 @@
     transform: translateX(0);
   }
 }
+.gsi-material-button {
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  -webkit-appearance: none;
+  background-color: WHITE;
+  background-image: none;
+  border: 1px solid #747775;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  color: #1f1f1f;
+  cursor: pointer;
+  font-family: "Roboto", arial, sans-serif;
+  font-size: 14px;
+  height: 40px;
+  letter-spacing: 0.25px;
+  outline: none;
+  overflow: hidden;
+  padding: 0 12px;
+  position: relative;
+  text-align: center;
+  -webkit-transition: background-color 0.218s, border-color 0.218s, box-shadow 0.218s;
+  transition: background-color 0.218s, border-color 0.218s, box-shadow 0.218s;
+  vertical-align: middle;
+  white-space: nowrap;
+  width: auto;
+  max-width: 400px;
+  min-width: min-content;
+}
+
+.gsi-material-button .gsi-material-button-icon {
+  height: 20px;
+  margin-right: 12px;
+  min-width: 20px;
+  width: 20px;
+}
+
+.gsi-material-button .gsi-material-button-content-wrapper {
+  -webkit-align-items: center;
+  align-items: center;
+  display: flex;
+  -webkit-flex-direction: row;
+  flex-direction: row;
+  -webkit-flex-wrap: nowrap;
+  flex-wrap: nowrap;
+  height: 100%;
+  justify-content: space-between;
+  position: relative;
+  width: 100%;
+}
+
+.gsi-material-button .gsi-material-button-contents {
+  -webkit-flex-grow: 1;
+  flex-grow: 1;
+  font-family: "Roboto", arial, sans-serif;
+  font-weight: 500;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  vertical-align: top;
+}
+
+.gsi-material-button .gsi-material-button-state {
+  -webkit-transition: opacity 0.218s;
+  transition: opacity 0.218s;
+  bottom: 0;
+  left: 0;
+  opacity: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+.gsi-material-button:disabled {
+  cursor: default;
+  background-color: rgba(255, 255, 255, 0.3803921569);
+  border-color: rgba(31, 31, 31, 0.1215686275);
+}
+
+.gsi-material-button:disabled .gsi-material-button-contents {
+  opacity: 38%;
+}
+
+.gsi-material-button:disabled .gsi-material-button-icon {
+  opacity: 38%;
+}
+
+.gsi-material-button:not(:disabled):active .gsi-material-button-state,
+.gsi-material-button:not(:disabled):focus .gsi-material-button-state {
+  background-color: #303030;
+  opacity: 12%;
+}
+
+.gsi-material-button:not(:disabled):hover {
+  -webkit-box-shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.3), 0 1px 3px 1px rgba(60, 64, 67, 0.15);
+  box-shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.3), 0 1px 3px 1px rgba(60, 64, 67, 0.15);
+}
+
+.gsi-material-button:not(:disabled):hover .gsi-material-button-state {
+  background-color: #303030;
+  opacity: 8%;
+}
+
 * {
   padding: 0;
   margin: 0;
@@ -864,4 +968,163 @@ button:hover {
 }
 #register div:nth-last-child(2) a:hover {
   color: #952323;
+}
+
+.signup-wrapper {
+  display: flex;
+  background: #3f2323;
+  justify-content: center;
+  width: 40%;
+  height: 51%;
+  align-items: center;
+  border-radius: 50px;
+  box-shadow: 0px 10px 50px 0px rgba(0, 0, 0, 0.8);
+}
+
+input[name=pwd] {
+  width: 100%;
+}
+
+input[name=pwd],
+input[name=email] {
+  border-radius: 5px;
+  height: 2rem;
+  border: 1px solid black;
+  margin-top: 0.3rem;
+  padding: 0 0.3rem;
+}
+
+#login {
+  flex-direction: column;
+  gap: 2.6rem;
+}
+#login .authTypes {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  width: 30%;
+  text-align: center;
+}
+#login .authTypes a {
+  padding: 0.7rem;
+  border-radius: 54px;
+  font-size: 0.8rem;
+  box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.4);
+  transition: all 0.3s;
+}
+#login .authTypes a:hover {
+  filter: brightness(85%);
+  background-color: #952323;
+  color: #f9f0eb;
+}
+#login .authTypes .gsi-material-button {
+  border: none;
+  border-radius: 19px;
+  box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.4);
+}
+#login .authTypes .gsi-material-button:hover {
+  filter: brightness(90%);
+}
+#login .authTypes .gh {
+  background-color: #0e0d0c;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+#login .authTypes .gh p {
+  width: 100%;
+}
+#login .authTypes .fa-github {
+  font-size: 1.5rem;
+}
+#login .loginSection {
+  height: 32%;
+}
+#login .loginSection .formInputs {
+  width: 76%;
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  grid-template-columns: 1fr;
+  gap: 1rem;
+}
+#login .loginSection .formInputs .forgotPass {
+  display: flex;
+  justify-content: space-between;
+  color: #f9f0eb;
+}
+#login .loginSection .formInputs .forgotPass p:hover {
+  color: #952323;
+  cursor: pointer;
+}
+#login .loginSection .formInputs .login-button {
+  padding: 0.5rem;
+  background: maroon;
+  color: white;
+}
+#login .loginSection .formInputs .login-button:hover {
+  filter: brightness(90%);
+}
+#login #modal {
+  text-align: right;
+  background-color: #e6e6e6;
+  color: black;
+  padding: 1rem;
+  border-radius: 1.2rem;
+}
+#login #modal > form {
+  display: grid;
+  margin: 0;
+  grid-template-columns: 1fr 2fr;
+}
+#login #modal > button {
+  margin-bottom: 1rem;
+  background: transparent;
+  padding: 0;
+}
+#login #modal > form > input {
+  margin: 0;
+  margin-left: auto;
+  width: 80%;
+}
+#login #modal > form > button {
+  grid-column: 2;
+  width: fit-content;
+  justify-self: end;
+  margin-top: 1rem;
+}
+#login div:nth-child(3) {
+  font-size: 0.85rem;
+  color: #3f2323;
+}
+#login div:nth-child(3) a {
+  color: #0087ca;
+}
+#login div:nth-child(3) a:hover {
+  color: #952323;
+}
+
+.open {
+  opacity: 1;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.close {
+  transform: translateX(100%);
+  opacity: 0;
+  visibility: hidden;
+  display: none;
+}
+
+.bg-cover {
+  background-color: rgba(0, 0, 0, 0.5);
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  z-index: 0;
+  pointer-events: none;
+  overflow: hidden;
 }/*# sourceMappingURL=app.css.map */
