--- a/client/src/sass/app.scss
+++ b/client/src/sass/app.scss
@@ -830,3 +830,184 @@ button:hover {
     }
   }
 }
+
+.signup-wrapper {
+  display: flex;
+  background: #3f2323;
+  justify-content: center;
+  width: 40%;
+  height: 51%;
+  align-items: center;
+  border-radius: 50px;
+  box-shadow: 0px 10px 50px 0px rgba(0, 0, 0, 0.8);
+}
+
+input[name="pwd"] {
+  width: 100%;
+}
+
+input[name="pwd"],
+input[name="email"] {
+  border-radius: 5px;
+  height: 2rem;
+  border: 1px solid black;
+  margin-top: 0.3rem;
+  padding: 0 0.3rem;
+}
+
+#login {
+  flex-direction: column;
+  gap: 2.6rem;
+
+  .authTypes {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    width: 30%;
+    text-align: center;
+
+    a {
+      padding: 0.7rem;
+      border-radius: 54px;
+      font-size: 0.8rem;
+      box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.4);
+      transition: all 0.3s;
+    }
+
+    a:hover {
+      filter: brightness(85%);
+      background-color: $ten;
+      color: $white;
+    }
+
+    .gsi-material-button {
+      border: none;
+      border-radius: 19px;
+      box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.4);
+    }
+
+    .gsi-material-button:hover {
+      filter: brightness(90%);
+      // background-color: inherit;
+    }
+
+    .gh {
+      background-color: #0e0d0c;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+
+      p {
+        width: 100%;
+      }
+    }
+
+    .fa-github {
+      font-size: 1.5rem;
+    }
+  }
+
+  .loginSection {
+    height: 32%;
+    .formInputs {
+      width: 76%;
+      // height: 85%;
+      display: grid;
+      justify-content: center;
+      align-items: center;
+      grid-template-columns: 1fr;
+      gap: 1rem;
+
+      .forgotPass {
+        display: flex;
+        justify-content: space-between;
+        color: $white;
+
+        p:hover {
+          color: $ten;
+          cursor: pointer;
+        }
+      }
+
+      .login-button {
+        padding: 0.5rem;
+        background: maroon;
+        color: white;
+      }
+
+      .login-button:hover {
+        filter: brightness(90%);
+      }
+    }
+  }
+
+  #modal {
+    text-align: right;
+    background-color: #e6e6e6;
+    color: black;
+    padding: 1rem;
+    border-radius: 1.2rem;
+  }
+
+  #modal > form {
+    display: grid;
+    margin: 0;
+    grid-template-columns: 1fr 2fr;
+  }
+
+  #modal > button {
+    margin-bottom: 1rem;
+    background: transparent;
+    padding: 0;
+  }
+
+  #modal > form > input {
+    margin: 0;
+    margin-left: auto;
+    width: 80%;
+  }
+
+  #modal > form > button {
+    grid-column: 2;
+    width: fit-content;
+    justify-self: end;
+    margin-top: 1rem;
+  }
+
+  div:nth-child(3) {
+    font-size: 0.85rem;
+    color: $navBar;
+
+    a {
+      color: $highlight;
+    }
+
+    a:hover {
+      color: $ten;
+    }
+  }
+}
+
+.open {
+  opacity: 1;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.close {
+  transform: translateX(100%);
+  opacity: 0;
+  visibility: hidden;
+  display: none;
+}
+
+.bg-cover {
+  background-color: rgba(0, 0, 0, 0.5);
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  z-index: 0;
+  pointer-events: none;
+  overflow: hidden;
+}
