--- a/client/src/css/app.css
+++ b/client/src/css/app.css
@@ -46,6 +46,17 @@
   body #heading nav .menu-btn .menu .navbar-a a {
     color: black;
   }
+  body #heading nav .menu-btn .menu .navbar-a button {
+    box-shadow: 0 0 10px 2px rgba(4, 4, 4, 0.4);
+    border-radius: 15px;
+  }
+  body #heading nav .menu-btn .menu .navbar-a li:nth-child(3) button {
+    background-color: #952323;
+    color: #f9f0eb;
+  }
+  body #heading nav .menu-btn .menu .navbar-a li:nth-child(3) button:hover {
+    filter: brightness(80%);
+  }
   body #heading nav .menu-btn .close-icon {
     position: absolute;
     font-size: 2rem;
