--- a/client/src/sass/abstracts/_media.scss
+++ b/client/src/sass/abstracts/_media.scss
@@ -1,3 +1,5 @@
+@use "./colors" as *;
+
 @media (max-width: 1040px) {
   body #heading nav {
     .navbar-w {
@@ -50,6 +52,20 @@
 
           a {
             color: black;
+          }
+
+          button {
+            box-shadow: 0 0 10px 2px rgba(4, 4, 4, 0.4);
+            border-radius: 15px;
+          }
+
+          li:nth-child(3) button {
+            background-color: $ten;
+            color: $white;
+          }
+
+          li:nth-child(3) button:hover {
+            filter: brightness(80%);
           }
         }
       }
