add login and signin system

--- a/client/src/sass/abstracts/_google.scss
+++ b/client/src/sass/abstracts/_google.scss
@@ -26,8 +26,8 @@
   transition: background-color 0.218s, border-color 0.218s, box-shadow 0.218s;
   vertical-align: middle;
   white-space: nowrap;
-  width: auto;
-  max-width: 400px;
+  width: 65%;
+  max-width: 300px;
   min-width: min-content;
 }
 
