--- a/client/src/css/app.css
+++ b/client/src/css/app.css
@@ -221,8 +221,8 @@
   transition: background-color 0.218s, border-color 0.218s, box-shadow 0.218s;
   vertical-align: middle;
   white-space: nowrap;
-  width: auto;
-  max-width: 400px;
+  width: 65%;
+  max-width: 300px;
   min-width: min-content;
 }
 
@@ -930,6 +930,8 @@ button:hover {
   background: #3f2323;
   justify-content: center;
   width: 40%;
+  max-width: 370px;
+  min-height: 404px;
   height: 51%;
   align-items: center;
   border-radius: 50px;
@@ -1014,7 +1016,7 @@ input[name=email] {
 
 #login {
   flex-direction: column;
-  gap: 2.6rem;
+  gap: 1rem;
 }
 #login .authTypes {
   display: flex;
@@ -1022,6 +1024,7 @@ input[name=email] {
   gap: 1rem;
   width: 30%;
   text-align: center;
+  align-items: center;
 }
 #login .authTypes a {
   padding: 0.7rem;
@@ -1048,6 +1051,8 @@ input[name=email] {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  width: 65%;
+  max-width: 300px;
 }
 #login .authTypes .gh p {
   width: 100%;
@@ -1057,6 +1062,9 @@ input[name=email] {
 }
 #login .loginSection {
   height: 32%;
+  width: 25%;
+  max-width: 384px;
+  min-width: 333px;
 }
 #login .loginSection .formInputs {
   width: 76%;
@@ -1145,4 +1153,61 @@ input[name=email] {
   z-index: 0;
   pointer-events: none;
   overflow: hidden;
+}
+
+#verify-code {
+  width: 100vw;
+  height: 100vh;
+  width: 100svw;
+  height: 100svh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #3f2323;
+}
+#verify-code .verification-info {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+#verify-code .verification-info h1 {
+  font-size: 1.5rem;
+  font-family: auto;
+}
+#verify-code .verification-code {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  gap: 1rem;
+  padding: 2rem;
+  margin-top: 2rem;
+  border-radius: 14px;
+  box-shadow: 0 0 13px 2px rgba(0, 0, 0, 0.5);
+  max-width: 44rem;
+}
+#verify-code .verification-code button {
+  width: fit-content;
+  background-color: transparent;
+  padding: 0;
+  margin-top: 0.5rem;
+  font-weight: 600;
+  color: #0087ca;
+}
+#verify-code .verification-code button:hover {
+  color: #3f2323;
+}
+#verify-code .input-boxes {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+}
+#verify-code .code-input {
+  width: 25px;
+  height: 38px;
+  font-size: 1.5rem;
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.1);
+  border-radius: 7px;
+  outline: none;
+  border: 2px #952323 solid;
 }/*# sourceMappingURL=app.css.map */
