--- a/client/src/sass/app.scss
+++ b/client/src/sass/app.scss
@@ -767,6 +767,8 @@ button:hover {
     background: #3f2323;
     justify-content: center;
     width: 40%;
+    max-width: 370px;
+    min-height: 404px;
     height: 51%;
     align-items: center;
     border-radius: 50px;
@@ -863,7 +865,7 @@ input[name="email"] {
 
 #login {
   flex-direction: column;
-  gap: 2.6rem;
+  gap: 1rem;
 
   .authTypes {
     display: flex;
@@ -871,6 +873,7 @@ input[name="email"] {
     gap: 1rem;
     width: 30%;
     text-align: center;
+    align-items: center;
 
     a {
       padding: 0.7rem;
@@ -902,6 +905,8 @@ input[name="email"] {
       display: flex;
       justify-content: space-between;
       align-items: center;
+      width: 65%;
+      max-width: 300px;
 
       p {
         width: 100%;
@@ -915,6 +920,9 @@ input[name="email"] {
 
   .loginSection {
     height: 32%;
+    width: 25%;
+    max-width: 384px;
+    min-width: 333px;
     .formInputs {
       width: 76%;
       // height: 85%;
@@ -1016,4 +1024,70 @@ input[name="email"] {
   z-index: 0;
   pointer-events: none;
   overflow: hidden;
+}
+
+/////////////////////////////////// VERIFY CODE PAGE
+
+#verify-code {
+  width: 100vw;
+  height: 100vh;
+  width: 100svw;
+  height: 100svh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: $navBar;
+
+  .verification-info {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    // max-width: 44rem;
+
+    h1 {
+      font-size: 1.5rem;
+      font-family: auto;
+    }
+  }
+
+  .verification-code {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 1rem;
+    padding: 2rem;
+    margin-top: 2rem;
+    border-radius: 14px;
+    box-shadow: 0 0 13px 2px rgba(0, 0, 0, 0.5);
+    max-width: 44rem;
+
+    button {
+      width: fit-content;
+      background-color: transparent;
+      padding: 0;
+      margin-top: 0.5rem;
+      font-weight: 600;
+      color: $highlight;
+    }
+    button:hover {
+      color: $navBar;
+    }
+  }
+
+  .input-boxes {
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+  }
+
+  .code-input {
+    width: 25px;
+    height: 38px;
+    font-size: 1.5rem;
+    text-align: center;
+    background-color: rgba(0, 0, 0, 0.1);
+    border-radius: 7px;
+    outline: none;
+    border: 2px $ten solid;
+  }
 }
