add error handling for rejecting github login

--- a/client/src/sass/app.scss
+++ b/client/src/sass/app.scss
@@ -881,6 +881,7 @@ input[name="email"] {
       font-size: 0.8rem;
       box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.4);
       transition: all 0.3s;
+      min-width: 245px;
     }
 
     a:hover {
