--- a/client/src/css/app.css
+++ b/client/src/css/app.css
@@ -49,6 +49,7 @@
   body #heading nav .menu-btn .menu .navbar-a button {
     box-shadow: 0 0 10px 2px rgba(4, 4, 4, 0.4);
     border-radius: 15px;
+    min-width: 6rem;
   }
   body #heading nav .menu-btn .menu .navbar-a li:nth-child(3) button {
     background-color: #952323;
@@ -1032,6 +1033,7 @@ input[name=email] {
   font-size: 0.8rem;
   box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.4);
   transition: all 0.3s;
+  min-width: 245px;
 }
 #login .authTypes a:hover {
   filter: brightness(85%);
