--- a/client/src/sass/abstracts/_media.scss
+++ b/client/src/sass/abstracts/_media.scss
@@ -57,6 +57,7 @@
           button {
             box-shadow: 0 0 10px 2px rgba(4, 4, 4, 0.4);
             border-radius: 15px;
+            min-width: 6rem;
           }
 
           li:nth-child(3) button {
