--- a/client/src/css/app.css
+++ b/client/src/css/app.css
@@ -45,6 +45,9 @@
   }
   body #heading nav .menu-btn .menu .navbar-a a {
     color: black;
+    border-radius: 15px;
+    padding: 0.5rem;
+    box-shadow: 0px 0px 6px 0px #999;
   }
   body #heading nav .menu-btn .menu .navbar-a button {
     box-shadow: 0 0 10px 2px rgba(4, 4, 4, 0.4);
@@ -400,7 +403,7 @@ footer .copyright {
 .fa-eye-slash,
 .fa-eye {
   position: absolute;
-  margin-left: 1rem;
+  margin-left: 0.5rem;
   top: 30%;
 }
 
