--- a/client/src/sass/abstracts/_media.scss
+++ b/client/src/sass/abstracts/_media.scss
@@ -52,6 +52,9 @@
 
           a {
             color: black;
+            border-radius: 15px;
+            padding: 0.5rem;
+            box-shadow: 0px 0px 6px 0px #999;
           }
 
           button {
