--- a/client/src/sass/app.scss
+++ b/client/src/sass/app.scss
@@ -555,7 +555,7 @@ button:hover {
 
         h2 {
           color: $navBar;
-          margin: 1rem 0 0 1.2rem;
+          margin: 1rem 0 0 3rem;
           text-decoration: underline;
         }
       }
@@ -1091,4 +1091,38 @@ input[name="email"] {
     outline: none;
     border: 2px $ten solid;
   }
+}
+
+///////////////////////////// saved recipes
+.saved-recipes {
+  h2 {
+    font-family: fangsong;
+    letter-spacing: 1px;
+  }
+
+  .food-item {
+    position: relative;
+    .heart-icon {
+      color: white;
+      position: absolute;
+      top: 0.5rem;
+      right: 1rem;
+      width: 30px;
+      height: fit-content;
+      z-index: 3;
+      transition: all 1s;
+
+      path {
+        pointer-events: none;
+      }
+    }
+    .heart-icon:hover {
+      color: #d5334f;
+      scale: 1.3;
+    }
+  }
+}
+
+#recipe .content:has(.saved-recipes) {
+  margin-top: 5.5rem;
 }
