--- a/client/src/sass/app.scss
+++ b/client/src/sass/app.scss
@@ -574,6 +574,7 @@ button:hover {
         border-radius: 8px;
 
         .food-item {
+          position: relative;
           width: 220px;
           height: 235px;
           display: flex;
@@ -1094,35 +1095,59 @@ input[name="email"] {
 }
 
 ///////////////////////////// saved recipes
-.saved-recipes {
+#recipe .saved-recipes {
   h2 {
     font-family: fangsong;
     letter-spacing: 1px;
   }
 
-  .food-item {
-    position: relative;
-    .heart-icon {
-      color: white;
-      position: absolute;
-      top: 0.5rem;
-      right: 1rem;
-      width: 30px;
-      height: fit-content;
-      z-index: 3;
-      transition: all 1s;
+  .foods:has(.saved-recipes-ph) {
+    width: 100vw;
+    width: 100svw;
+    padding: 0;
+  }
 
-      path {
-        pointer-events: none;
-      }
-    }
-    .heart-icon:hover {
-      color: #d5334f;
-      scale: 1.3;
-    }
+  .saved-recipes-ph {
+    color: $ten;
+    font-weight: 600;
+    font-size: 3rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+  }
+
+  .save-icon {
+    color: $highlight;
+  }
+
+  .save-icon:hover {
+    color: $ten;
   }
 }
 
+.save-icon {
+  color: white;
+  position: absolute;
+  top: 0.5rem;
+  right: 1rem;
+  width: 30px;
+  height: fit-content;
+  z-index: 3;
+  transition: all 1s;
+
+  path {
+    pointer-events: none;
+  }
+}
+.save-icon:hover {
+  color: $highlight;
+  scale: 1.3;
+}
 #recipe .content:has(.saved-recipes) {
   margin-top: 5.5rem;
+}
+
+.bookmarked {
+  color: $highlight;
 }
