--- a/client/src/sass/app.scss
+++ b/client/src/sass/app.scss
@@ -184,29 +184,6 @@ footer {
       display: none;
     }
 
-    // .search {
-    //     display: flex;
-    //     align-items: center;
-
-    //     #searchbar {
-    //         width: 100%;
-    //         height: 2.3rem;
-    //         padding: 0 10px;
-    //         margin-right: 5px;
-    //         border-radius: 5px;
-    //         border: 2px solid $sixty;
-    //     }
-
-    //     #searchbar:focus {
-    //         outline: none;
-    //         border: 2px solid $ten;
-    //     }
-
-    //     .search-icon:hover {
-    //         cursor: pointer;
-    //     }
-    // }
-
     .navbar {
       list-style: none;
       display: flex;
@@ -274,6 +251,61 @@ footer {
         transform-origin: bottom left;
       }
     }
+
+    .profile-icon {
+      cursor: pointer;
+      transition: all 0.5s;
+    }
+
+    .profile-icon:hover {
+      color: $ten;
+    }
+
+    .acct-menu {
+      position: absolute;
+      right: 1.5rem;
+      top: 5.5rem;
+      list-style: none;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      gap: 1rem;
+      background-color: white;
+      color: $ten;
+      border-radius: 20px;
+      border: 2px solid;
+      height: 13rem;
+      width: 12rem;
+      transition: all 0.3s;
+
+      li > a {
+        color: $ten;
+      }
+
+      .logout {
+        cursor: pointer;
+      }
+
+      hr {
+        width: 80%;
+        border: 1px solid;
+      }
+    }
+
+    .hidden {
+      opacity: 0;
+      pointer-events: none;
+    }
+
+    .visible {
+      opacity: 1;
+      pointer-events: all;
+    }
+
+    .profile-icon:has(+ ul.visible) {
+      color: $ten;
+    }
   }
 }
 
@@ -336,21 +368,6 @@ video {
     font-size: 1.1rem;
     height: 8.75rem;
   }
-
-  // button {
-  //     padding: 1rem;
-  //     color: black;
-  //     background: whitesmoke;
-  //     border: none;
-  //     border-radius: 3px;
-  //     letter-spacing: .5px;
-  //     cursor: pointer;
-  // }
-
-  // button:hover {
-  //     background-color: $ten;
-  //     color: #e3e3e3;
-  // }
 }
 
 button {
